infrastructure/policy/kyverno/add-default-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-default-resources
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: add-default-resources-to-containers
      match:
        any:
          - resources:
              kinds: ["Deployment","StatefulSet","DaemonSet","Job","CronJob"]
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                containers:
                  - (name): "*"
                    resources:
                      requests:
                        +(cpu): "200m"
                        +(memory): "256Mi"
                      limits:
                        +(cpu): "1"
                        +(memory): "1Gi"
