infrastructure/policy/kyverno/require-security-context.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-security-context
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: require-run-as-nonroot
      match:
        any:
          - resources:
              kinds: ["Pod","Deployment","StatefulSet","DaemonSet","Job","CronJob"]
      validate:
        message: "Containers must runAsNonRoot and drop all capabilities with readOnlyRootFilesystem."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
                  readOnlyRootFilesystem: true
                  capabilities:
                    drop: ["ALL"]
            =(initContainers):
              - securityContext:
                  runAsNonRoot: true
                  readOnlyRootFilesystem: true
                  capabilities:
                    drop: ["ALL"]
